Make sure comment editor does not collapse.

--- a/client/css/_viewer.styl
+++ b/client/css/_viewer.styl
@@ -644,6 +644,7 @@ annotations-control-height = 30px
             overflow hidden
             color #444
             outline 0px solid transparent
+            min-height 16px
 
             /* Spans are added only by rangy.saveSelection marks,
                so we make sure they are not displayed */
